Integrate Signal 5.22.7